kuber/ingressClass.yaml
---

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/name: aws-load-balancer-controller
  name: alb
spec:
  controller: ingress.k8s.aws/alb
  parameters:
      apiGroup: elbv2.k8s.aws
      kind: IngressClassParams
      name: alb
