kuber/nginx-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy-service
spec:
  type: NodePort  # Set the service type to NodePort
  selector:
    app: nginx-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      # nodePort: 30007 (Optional: Uncomment and set if you want a specific port)
