kuber/recipe-generator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipe-generator-service
spec:
  selector:
    app: recipe-generator
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
