kuber/redis-leader-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-leader-service
  labels:
    app: redis
    role: leader
spec:
  clusterIP: None  # Makes the service headless
  selector:
    app: redis
    role: leader
  ports:
    - port: 6379
      targetPort: 6379
